--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title> TI-nspire CX - Guia de programación</title>
+	<title> IONIC - Guia de programación</title>
     <link href='http://fonts.googleapis.com/css?family=Chelsea+Market' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/0/normalize.min.css" type="text/css">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
@@ -28,14 +28,14 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
 
     <div class="scrollblock block-title">
-        <h1>TI-nspire CX - Guia simple</h1>
-        <p> Esta es una guia simple para programar con la calculadora TI-nspire CX CAS de la empresa Texa Instruments</p>
+        <h1>IONIC - Guia simple</h1>
+        <p> Esta es una guia simple para programar con IONIC</p>
         <a href="https://twitter.com/share" class="twitter-share-button" data-via="marlonfalcon4" data-size="large" data-url="https://falconsoft3d.github.io/Guia-TI-nspires-CX" data-related="marlonfalcon4">Tweet</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         <p class="meta">
             by <a href="https://twitter.com/marlonfalcon4">@marlonfalcon4</a>
             <br />credits to <a href="http://www.twitter.com/marlonfalcon4">Marlon Falcón</a><br />
-            por favor cualquier error reportelo a: <a href="https://github.com/falconsoft3d/Guia-TI-nspires-CX">github</a>
+            por favor cualquier error reportelo a: <a href="https://github.com/falconsoft3d/Guia-Ionic">github</a>
         </p>
         <div class="announcement">
 
@@ -47,25 +47,25 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
     <div class="scrollblock block-setup">
         <h2>Setup</h2>
         <p>
-            Conecte la calculadora al cable USB <br />
-        <p>
-            <a href="https://education.ti.com/es/nspirestudentcas">Download para OSX/Windows</a>
+            npm install -g ionic <br />
         </p>
-                <p>
-            Coloque la licencia <br />
-        <p>
     </div>
     
     <a name="create"></a>
     <div class="scrollblock block-create">
-        <h2>Hola Mundo</h2>
+        <h2>Comandos básicos</h2>
         <p>
-            Imprir un valor por pantalla <br />
-                <code> 1->mayvar </code><br />                
-                <code> Disp "Esto es un mensaje" , myvar </code><br />
-            <br />
-            Imprimimos una cadena de texto y luego el valor.
-        </p>
+                Crear un Proyecto <br />
+                <code> ionic start todo blank </code><br /> 
+
+                Configurar la plataforma <br />
+                <code> ionic platform add ios </code><br />
+                <code> ionic platform add android </code><br />
+
+                 Compilar  <br />
+                <code> ionic build ios </code><br />
+                <code> ionic emulate ios </code><br />
+        </p>                      
     </div>
     
 
