--- a/index.html
+++ b/index.html
@@ -71,12 +71,10 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
     <a name="checkout"></a>
     <div class="scrollblock block-checkout">
-        <h2>IF ELSE</h2>
+        <h2>Creando Iconos</h2>
         <p>
-            Si queremos comprobar que un valor cumple con una condición<br />
-            <code>if kt=4 Then</code><br />
-            <code>ElseIf kt=3 Then</code><br />
-            <code>EndIf</code>
+            Salve su imagen como icon.png, icon.psd, icon.ai la dimensión mínima es 192x192px coloquelo en la carpeta root y ejecute el siguiente comando<br />
+            <code>ionic resources --icon</code><br />
         </p>
     </div>
 
