--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
     <div class="scrollblock block-setup">
         <h2>Setup</h2>
         <p>
-            npm install -g ionic <br />
+            <code>  npm install -g ionic  </code><br />
         </p>
     </div>
     
