--- a/index.html
+++ b/index.html
@@ -81,16 +81,14 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
     <a name="trees"></a>
     <div class="scrollblock block-trees">
-        <h2>FOR</h2>
+        <h2>Splash Screen desde una Imagen</h2>
         <p>
-            <code>Request "Dame la cantidad de elementos",n</code><br />
-            <code>For i,1,n,1</code><br />
-            <code>Disp "El valor:",i</code><br />
-            <code>EndFor</code>
+         Salve la imagen en splash.png, splash.psd, splash.ai ponlo en el directorio resources la imagen debe tener un mínimo de  2208x2208px, y ejecute el siguiente comando<br />
+            <code>ionic resources --splash</code><br />
         </p>
     </div>
 
-
+<!-- 
 
     <a name="add"></a>
     <div class="scrollblock block-add">
@@ -133,7 +131,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
 
 
-<!-- 
+
 
     <a name="branching"></a>
     <div class="scrollblock block-branching">
