--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
         <div class="announcement">
 
         </div>
-        <img src="img/arrow.png" alt="" />
+        <img src="img/logo-ionic-framework-phonegap-spain.jpg" alt="" />
     </div>
     <!-- setup -->
     <a name="setup"></a>
