--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
 
     <a name="push"></a>
-    <div class="scrollblock block-remote">
+    <div class="scrollblock block-branching">
         <h2>Tipos de plantillas de inicio de Ionic</h2>
         <p>
-           Plantilla en Blanco
+           Plantilla en Blanco<br />
            <code>ionic start --v2 myApp blank</code><br />
-            Plantilla con Tabs
+            Plantilla con Tabs<br />
            <code>ionic start --v2 myApp tabs</code><br />
-           Plantilla con Menú
+           Plantilla con Menú<br />
            <code>ionic start --v2 myApp sidemenu</code><br />     
         </p>
     </div>
@@ -117,7 +117,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
 <!-- 
     <a name="branching"></a>
-    <div class="scrollblock block-branching">
+    <div class="scrollblock block-remote">
         <h2>Comando While</h2>
         <p>
               <code> 7->x </code><br />
