--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
 
 
+    <a name="branching"></a>
+    <div class="scrollblock block-remote">
+        <h2>Creando Aplicación de IONIC</h2>
+        <p>
+              <code> ionic start MyIonic2Project tutorial --v2 </code><br />
+        </p>
+    </div>
+
+
+
+
     <a name="push"></a>
     <div class="scrollblock block-branching">
         <h2>Tipos de plantillas de inicio de Ionic</h2>
