--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
 
 
-
     <a name="push"></a>
     <div class="scrollblock block-branching">
         <h2>Tipos de plantillas de inicio de Ionic</h2>
@@ -128,21 +127,18 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
     </div>
 
 
-<!-- 
+
     <a name="branching"></a>
     <div class="scrollblock block-remote">
-        <h2>Comando While</h2>
+        <h2>Mandar a compilar APK</h2>
         <p>
-              <code> 7->x </code><br />
-              <code> While x>5 </code><br />
-              <code> Request "Ingrese un número menor a: 5",x </code><br />
-              <code> endWhile </code><br />
-              <code> Disp "Terminó" </code><br />
+              Una vez que creamos la aplicación la compilamos para distribuirla<br />
+              <code> cordova build --release android </code><br />
         </p>
     </div>
 
 
-
+<!-- 
 
 
     <a name="branching"></a>
