--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
 
     <a name="branching"></a>
-    <div class="scrollblock block-branching">
+    <div class="scrollblock block-create">
         <h2>Mandar a compilar APK</h2>
         <p>
               Una vez que creamos la aplicación la compilamos para distribuirla<br />
