--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Chelsea+Market' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/0/normalize.min.css" type="text/css">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<meta name="google-site-verification" content="6SJfppWH73AwMKg9GAzWM4Htzr0i60eHL0H3PAvv7cw" />
 </head>
 
  <!--Start of Zopim Live Chat Script -->
