--- a/index.html
+++ b/index.html
@@ -138,6 +138,20 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
         </p>
     </div>
 
+	
+   <a name="trees"></a>
+    <div class="scrollblock block-trees">
+        <h2>Usuando la Camara de Cordova</h2>
+        <p>
+	    <code>ionic start camara</code><br />
+	    <code>ionic platform add android</code><br />
+            <code>npm install -g bower</code><br />
+	    <code>bower install ngCordova</code><br />
+	    <code>ionic plugin add cordova-plugin-camera</code><br />		
+        </p>
+    </div>
+	
+	
 
 <!-- 
 
