--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
     <div class="scrollblock block-checkout">
         <h2>Creando Iconos</h2>
         <p>
-            Salve su imagen como icon.png, icon.psd, icon.ai la dimensión mínima es 192x192px coloquelo en la carpeta root y ejecute el siguiente comando<br />
+            Salve su imagen como icon.png, icon.psd, icon.ai la dimensión mínima es 192x192px coloquelo en la carpeta <strong>Aplicacion/resourse</strong> y ejecute el siguiente comando<br />
             <code>ionic resources --icon</code><br />
         </p>
     </div>
